# commenter

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test.sh
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml  rustfmt.yml
src/: add.rs  affected.rs  build_constraints.rs  command.rs  curator.rs  handle.rs  ignores.rs  latest_version.rs  lib.rs  main.rs  multiple.rs  prelude.rs  regex.rs  snapshot.rs  types.rs  yaml.rs
src/command/: add.rs  add_loop.rs  affected.rs  diff_snapshot.rs  disabled.rs  grandfather.rs  maintainers.rs  multiple.rs  not_present.rs  outdated.rs  package_info.rs
src/util/: fs.rs
test/: snapshot-diff.txt
