[package]
name = "commenter"
version = "0.4.0"
authors = ["Adam Bergmark <adam@bergmark.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
home = "0.5.3"
itertools = "0.10.3"
lazy-regex = "2.2.1"
regex = "1.5.4"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_yaml = "0.8.23"
