[package]
name = "commenter"
version = "0.4.1"
authors = ["Adam Bergmark <adam@bergmark.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
clap = { version = "4.4.2", features = ["derive"] }
home = "0.5.3"
itertools = "0.12"
lazy-regex = "3.0.1"
regex = "1.5.4"
regex_captures = "0.2.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_yaml = "0.9.25"
strum = { version = "0.25.0", features = ["derive"] }
